# cmake-lib-template

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multipatform.yml
cmake/: StandardSettings.cmake
examples/: CMakeLists.txt
examples/src/: my_project_example.cpp
include/: my_project.hpp
src/: my_project.cpp
src/foo/: foo.c  foo.h
tests/: CMakeLists.txt
tests/src/: my_project_test.cpp
